Added NSBonjourServices BroadcastUploadExtension

--- a/BroadcastUploadExtension/Info.plist
+++ b/BroadcastUploadExtension/Info.plist
@@ -11,5 +11,10 @@
 		<key>RPBroadcastProcessMode</key>
 		<string>RPBroadcastProcessModeSampleBuffer</string>
 	</dict>
+    <key>NSBonjourServices</key>
+    <array>
+      <string>_googlecast._tcp</string>
+      <string>_CC1AD845._googlecast._tcp</string>
+    </array>
 </dict>
 </plist>
